Reduce SonarQube Issues